force-app/main/default/objects/Article_Telemetry__c/Article_Telemetry__c.object-meta.xml
<CustomObject>
    <description>Off-core telemetry for Tier 1 exact match detection. Stores SHA-256 content hashes of published Knowledge articles to find exact duplicates without locking Knowledge__kav.</description>
    <label>Article Telemetry</label>
    <nameField>
        <displayFormat>AT-{0000}</displayFormat>
        <label>Telemetry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Article Telemetry</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>