force-app/main/default/objects/Article_Telemetry__c/fields/Content_Hash__c.field-meta.xml
<CustomField>
    <fullName>Content_Hash__c</fullName>
    <description>SHA-256 hex digest of the normalized article content (lowercase, HTML stripped, special chars removed).</description>
    <label>Content Hash</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>