force-app/main/default/objects/Article_Telemetry__c/fields/Hash_Computed_Date__c.field-meta.xml
<CustomField>
    <fullName>Hash_Computed_Date__c</fullName>
    <description>Timestamp of when the content hash was last computed.</description>
    <label>Hash Computed Date</label>
    <type>DateTime</type>
</CustomField>