force-app/main/default/objects/Article_Telemetry__c/fields/Knowledge_Article__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Article__c</fullName>
    <description>The KnowledgeArticleVersion Id (Knowledge__kav.Id) of the article this hash belongs to.</description>
    <label>Knowledge Article</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>