force-app/main/default/objects/Article_Telemetry__c/fields/Telemetry_Key__c.field-meta.xml
<CustomField>
    <fullName>Telemetry_Key__c</fullName>
    <description>The stable KnowledgeArticleId used as external ID for upsert. Ensures one telemetry record per article (latest version overwrites previous).</description>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Telemetry Key</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>